Some cosmetic cleanup and test for 100 cycles looks good

--- a/.gitignore
+++ b/.gitignore
@@ -40,12 +40,11 @@ local.properties
 # TeXlipse plugin
 .texlipse
 ### Scala template
-*.class
 *.log
 
 # sbt specific
 .cache
-.history
+# .history
 .lib/
 dist/*
 target/
@@ -101,31 +100,13 @@ hs_err_pid*
 *.app
 ### C template
 # Object files
-*.o
 *.ko
-*.obj
 *.elf
 
-# Precompiled Headers
-*.gch
-*.pch
-
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
-
 # Shared objects (inc. Windows DLLs)
-*.dll
-*.so
 *.so.*
-*.dylib
 
 # Executables
-*.exe
-*.out
-*.app
 *.i*86
 *.x86_64
 *.hex
