--- a/.github/actions/hello-world-composite-action.yml
+++ b/.github/actions/hello-world-composite-action.yml
@@ -14,9 +14,9 @@ runs:
   steps:
     - run: echo Hello ${{ inputs.who-to-greet }}.
       shell: bash
-    - run: github-actions-path ${{ github.action_path }}
-    - id: random-number-generator
-      run: echo "::set-output name=random-id::$(echo $RANDOM)"
-      shell: bash
-    - run: ${{ github.action_path }}/goodbye.sh
-      shell: bash
+    - run: echo github-actions-path ${{ github.action_path }}
+#    - id: random-number-generator
+#      run: echo "::set-output name=random-id::$(echo $RANDOM)"
+#      shell: bash
+#    - run: ${{ github.action_path }}/goodbye.sh
+#      shell: bash
