--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,5 +12,5 @@ jobs:
 #        uses: actions/hello-world-composite-action@v1
 #        with:
 #          who-to-greet: 'Mona the Octocat'
-      - run: echo random-number ${{ steps.foo.outputs.random-number }}
-        shell: bash
+#      - run: echo random-number ${{ steps.foo.outputs.random-number }}
+#        shell: bash
