--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,9 +8,10 @@ jobs:
      - uses: actions/checkout@v2
      - name: show path
        run: echo github-actions-path ${{ github.action_path }}
-#      - id: foo
-#        uses: actions/hello-world-composite-action@v1
-#        with:
-#          who-to-greet: 'Mona the Octocat'
+       shell: bash
+      - id: foo
+        uses: ./actions/hello-world-composite-action@v1
+        with:
+          who-to-greet: 'Mona the Octocat'
 #      - run: echo random-number ${{ steps.foo.outputs.random-number }}
 #        shell: bash
