--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
       - name: show path
         run: echo github-actions-path ${{ github.action_path }}
       - name: show cwd
-        run: pwd && ls -l
+        run: pwd && ls -la && find ./actions && find ./.github/workflows
       - id: foo
         uses: ./actions/hello-world-composite-action@v1
         with:
