--- a/.github/actions/goodbye/action.yml
+++ b/.github/actions/goodbye/action.yml
@@ -12,13 +12,10 @@ outputs:
 runs:
   using: "composite"
   steps:
-    - run: echo Hello ${{ inputs.who-to-greet }}.
+    - run: echo Goodbye ${{ inputs.who-to-greet }}.
       shell: bash
     - run: echo github-actions-path ${{ github.action_path }}
       shell: bash
-    - uses: ./.github/actions/goodbye
-      with:
-        who-to-greet: 'Mona the Octocat'
 #    - id: random-number-generator
 #      run: echo "::set-output name=random-id::$(echo $RANDOM)"
 #      shell: bash
